wrokign on zepto optimization

--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -54,6 +54,7 @@
 
     <script type="module" src="{{ 'vendor.min.js' | asset_url }}"></script>
     <script type="module" src="{{ 'theme.js' | asset_url }}"></script>
+    <script type="module" src="{{ 'custom-sections.js' | asset_url }}"></script>
 
     {{ content_for_header }}
 
