--- a/snippets/product-card-horizontal.liquid
+++ b/snippets/product-card-horizontal.liquid
@@ -38,7 +38,7 @@ Supported variables
           <input type="hidden" name="quantity" value="1">
 
           {% comment %} view set button {% endcomment %}
-          <button aria-controls="{{ modal_id }}" class="@large:horizontal-product-card__button button button--outline button--subdued">{{ 'product.general.view_set_button' | t }}</button>
+          <a href="{{ product.url }}" class="@large:horizontal-product-card__button button button--outline button--subdued">{{ 'product.general.view_set_button' | t }}</a>
 
           <button type="submit" class="@narrow:horizontal-product-card__button link">{{ 'product.general.add_to_cart_button' | t }}</button>
           <button type="submit" class="@large:horizontal-product-card__button button button--primary">{{ 'product.general.add_to_cart_button' | t }}</button>
@@ -52,7 +52,7 @@ Supported variables
           LOADING
         </quick-buy-modal>
         {% comment %} view set button {% endcomment %}
-        <button aria-controls="{{ modal_id }}" class="@large:horizontal-product-card__button button button--outline button--subdued">{{ 'product.general.view_set_button' | t }}</button>
+        <a href="{{ product.url }}" class="@large:horizontal-product-card__button button button--outline button--subdued">{{ 'product.general.view_set_button' | t }}</a>
 
         
         <button aria-controls="{{ modal_id }}" class="@narrow:horizontal-product-card__button link">{{ 'product.general.add_to_cart_button' | t }}</button>
