--- a/assets/main.css
+++ b/assets/main.css
@@ -179,6 +179,7 @@
 }
 .template-product .product-info .feature-badge-list-v2 {
   justify-content: space-evenly;
+  align-items: flex-end;
 }
 .template-product .product-info .feature-badge-list-v2 .product-info__block-item {
   width: 100px;
@@ -193,6 +194,190 @@
   font-weight: 600;
   line-height: normal;
   text-transform: uppercase;
+}
+.template-product .product-info .scroll-customize-wrapper-mrb {
+  margin-bottom: 27px;
+}
+.template-product .product-info .product_customizar_options {
+  display: flex;
+  -moz-column-gap: 20px;
+       column-gap: 20px;
+}
+.template-product .product-info .product-personalizer {
+  display: flex;
+  flex-wrap: wrap;
+  -moz-column-gap: 17px;
+       column-gap: 17px;
+  row-gap: 13px;
+  padding: 17px !important;
+  border-radius: 22px;
+  border: 1px solid #1C1C1C;
+  background: #F9F9F9;
+  margin-bottom: 0px !important;
+  width: 350px;
+}
+.template-product .product-info .product-personalizer .pplr-wrapper.pplr-checkbox[data-main="1"] {
+  width: 100%;
+}
+.template-product .product-info .product-personalizer .pplr-wrapper.pplr-checkbox[data-main="1"] .pplrlabel {
+  color: #1C1C1C;
+  font-family: Nunito Sans;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+  letter-spacing: 1.6px;
+  padding: 0px;
+  display: flex;
+  align-items: center;
+  width: 100%;
+}
+.template-product .product-info .product-personalizer .pplr-wrapper.pplr-checkbox[data-main="1"] .pplrlabel input {
+  margin-right: 10px;
+}
+.template-product .product-info .product-personalizer .pplr-wrapper.pplr-checkbox[data-main="1"] .pplrlabel .pplr_option_price_span {
+  color: #343434;
+  text-align: right;
+  font-family: Nunito Sans;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  letter-spacing: 1.4px;
+  flex: 1;
+}
+.template-product .product-info .product-personalizer .pplr-wrapper[data-main="2"] {
+  order: 3;
+  flex: 1;
+  display: flex;
+  flex-wrap: wrap;
+}
+.template-product .product-info .product-personalizer .pplr-wrapper[data-main="2"] .pplrlabel {
+  color: #1C1C1C;
+  font-family: Nunito Sans;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 14px; /* 100% */
+  letter-spacing: 1.4px;
+  width: 100%;
+  padding: 5px 0px;
+}
+.template-product .product-info .product-personalizer .pplr-wrapper[data-main="2"] input[type=text] {
+  border-radius: 10px;
+  border: 1px solid #1C1C1C;
+  background: #F8F8F8;
+  margin-bottom: 0px;
+  order: 3;
+  height: 27px;
+}
+.template-product .product-info .product-personalizer .pplr-wrapper[data-main="2"] .pplr-character-count {
+  padding: 0px;
+  position: relative;
+  color: #B5B5B5;
+  font-family: Nunito Sans;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 14px; /* 100% */
+  letter-spacing: 1.4px;
+  flex: 1;
+  margin-bottom: 8px;
+}
+.template-product .product-info .product-personalizer .pplr-wrapper[data-main="2"] .pplr-character-count .lt {
+  display: none;
+}
+.template-product .product-info .product-personalizer .pplr-wrapper[data-main="2"] .pplr-character-count .lm {
+  display: initial;
+}
+.template-product .product-info .product-personalizer .pplr_image_loader {
+  width: 90px !important;
+  height: 90px !important;
+  border-radius: 10px;
+  border: 1px solid #343434;
+  overflow: hidden;
+}
+.template-product .product-info .product-personalizer .pplr_image_loader img {
+  width: 90px !important;
+  height: 90px !important;
+  max-width: initial;
+}
+.template-product .product-info .ptw-app-wrapper {
+  display: flex;
+  flex-wrap: wrap;
+  -moz-column-gap: 17px;
+       column-gap: 17px;
+  row-gap: 13px;
+  padding: 17px !important;
+  border-radius: 22px;
+  border: 1px solid #1C1C1C;
+  background: #F9F9F9;
+  margin-bottom: 0px !important;
+  width: 350px;
+}
+.template-product .product-info .ptw-app-wrapper .ptw-app-desc {
+  flex: 1;
+}
+.template-product .product-info .ptw-app-wrapper .ptw-app-desc label[for=ptw-gift-needed] {
+  flex: 1;
+  display: flex;
+  margin-left: 10px;
+  justify-content: space-between;
+  flex-direction: row-reverse;
+  align-items: center;
+  color: #1C1C1C;
+  font-family: Nunito Sans;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+  letter-spacing: 1.6px;
+}
+.template-product .product-info .ptw-app-wrapper .ptw-app-desc label[for=ptw-gift-needed] .ptw-price {
+  color: #343434;
+  text-align: right;
+  font-family: Nunito Sans;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  letter-spacing: 1.4px;
+}
+.template-product .product-info .ptw-app-wrapper .ptw-app-label {
+  display: flex;
+}
+.template-product .product-info .ptw-app-wrapper .ptw-app-gnote {
+  display: flex;
+  -moz-column-gap: 17px;
+       column-gap: 17px;
+  width: 100%;
+}
+.template-product .product-info .ptw-app-wrapper .ptw-app-gnote .ptw-gift-image {
+  width: 90px !important;
+  height: 90px !important;
+  border-radius: 10px;
+  border: 1px solid #343434;
+}
+.template-product .product-info .ptw-app-wrapper .ptw-app-gnote .ptw-message-note {
+  display: initial !important;
+  flex: 1;
+}
+.template-product .product-info .ptw-app-wrapper .ptw-app-gnote .ptw-message-note .note-label {
+  color: #1C1C1C;
+  font-family: Nunito Sans;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 14px; /* 100% */
+  letter-spacing: 1.4px;
+  margin-bottom: 15px;
+}
+.template-product .product-info .ptw-app-wrapper .ptw-app-gnote .ptw-message-note textarea {
+  width: 100%;
+  border-radius: 10px;
+  border: 1px solid #1C1C1C;
+  background: #F8F8F8;
+  height: 49px;
 }
 .template-product .product-info .product-info__block-item[data-block-type=complementary-products] .complementary-products__header p {
   color: #1C1C1C;
@@ -276,4 +461,33 @@
   line-height: normal;
   letter-spacing: 1.5px;
   text-transform: uppercase;
+}
+
+scroll-wrapper-slider {
+  display: block;
+  position: relative;
+}
+scroll-wrapper-slider .inner_container_items {
+  width: 100%;
+  overflow-x: auto;
+  position: relative;
+  overflow-y: hidden;
+  scroll-behavior: smooth;
+}
+scroll-wrapper-slider .arrow-slider {
+  position: absolute;
+  z-index: 9;
+  top: calc(50% - 19px);
+  cursor: pointer;
+  visibility: hidden;
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+}
+scroll-wrapper-slider .left-button svg {
+  transform: rotate(180deg);
+}
+scroll-wrapper-slider .right-button {
+  right: 0px;
+}
+scroll-wrapper-slider.without-scroll .inner_container_items::-webkit-scrollbar {
+  display: none;
 }
