--- a/assets/main.css
+++ b/assets/main.css
@@ -144,6 +144,7 @@
 .template-product .product-info .product-info__block-item[data-block-type=product-variations] .variant-picker__option .h-stack.variant-picker__option-values .media-swatch {
   border-radius: 22px;
   border-color: #BEBEBE;
+  aspect-ratio: 1;
 }
 @media screen and (min-width: 700px) {
   .template-product .product-info .product-info__block-item[data-block-type=product-variations] .variant-picker__option .h-stack.variant-picker__option-values .media-swatch {
@@ -181,8 +182,16 @@
   justify-content: space-evenly;
   align-items: flex-end;
 }
+@media screen and (max-width: 700px) {
+  .template-product .product-info .feature-badge-list-v2 {
+    justify-content: space-between;
+    -moz-column-gap: 10px;
+         column-gap: 10px;
+  }
+}
 .template-product .product-info .feature-badge-list-v2 .product-info__block-item {
   width: 100px;
+  min-width: 100px;
 }
 .template-product .product-info .feature-badge-list-v2 .product-info__block-item .feature-badge {
   flex-direction: column;
@@ -302,6 +311,34 @@
   height: 90px !important;
   max-width: initial;
 }
+.template-product .product-info .ptw-app-label {
+  /* Hide the default checkbox */
+  position: relative;
+  /* Define the custom appearance for the checkbox */
+  /* Style when the checkbox is checked */
+}
+.template-product .product-info .ptw-app-label input[type=checkbox] {
+  display: none;
+}
+.template-product .product-info .ptw-app-label input[type=checkbox] + label::before {
+  position: absolute;
+  left: 0px;
+  content: " ";
+  display: inline-block;
+  width: 15px;
+  height: 15px;
+  border: 1px solid #343434;
+  border-radius: 50%;
+  margin-right: 10px;
+  text-align: center;
+  line-height: 18px;
+  font-weight: bold;
+  padding: 1px;
+}
+.template-product .product-info .ptw-app-label input[type=checkbox]:checked + label::before {
+  background: radial-gradient(#0500FF 0%, #0500FF 50%, transparent 60%, transparent);
+  color: #fff;
+}
 .template-product .product-info .ptw-app-wrapper {
   display: flex;
   flex-wrap: wrap;
@@ -321,7 +358,6 @@
 .template-product .product-info .ptw-app-wrapper .ptw-app-desc label[for=ptw-gift-needed] {
   flex: 1;
   display: flex;
-  margin-left: 10px;
   justify-content: space-between;
   flex-direction: row-reverse;
   align-items: center;
@@ -332,6 +368,7 @@
   font-weight: 700;
   line-height: normal;
   letter-spacing: 1.6px;
+  margin-left: 25px;
 }
 .template-product .product-info .ptw-app-wrapper .ptw-app-desc label[for=ptw-gift-needed] .ptw-price {
   color: #343434;
@@ -473,6 +510,7 @@ scroll-wrapper-slider .inner_container_items {
   position: relative;
   overflow-y: hidden;
   scroll-behavior: smooth;
+  flex-wrap: nowrap;
 }
 scroll-wrapper-slider .arrow-slider {
   position: absolute;
@@ -487,6 +525,9 @@ scroll-wrapper-slider .left-button svg {
 }
 scroll-wrapper-slider .right-button {
   right: 0px;
+}
+scroll-wrapper-slider.without-arrows .arrow-slider {
+  display: none !important;
 }
 scroll-wrapper-slider.without-scroll .inner_container_items::-webkit-scrollbar {
   display: none;
