--- a/snippets/buy-buttons-with-quantity.liquid
+++ b/snippets/buy-buttons-with-quantity.liquid
@@ -85,8 +85,7 @@ Supported variables
             {%- else -%}
               {%- assign atc_button_style = 'solid' -%}
             {%- endif -%}
-    
-            {%- render 'button', content: button_content, type: 'submit', disabled: button_disabled, style: atc_button_style, background: atc_button_background, text_color: atc_button_text_color, stretch: true -%}
+            {%- render 'button', content: button_content, type: 'submit', disabled: button_disabled, style: atc_button_style, background: atc_button_background, text_color: atc_button_text_color, stretch: true, show_price: true -%}
     
             {%- if show_payment_button -%}
               {{- form | payment_button -}}
