--- a/snippets/product-info.liquid
+++ b/snippets/product-info.liquid
@@ -275,7 +275,7 @@ Supported variables
                     </div>
                   {%- endif -%}
 
-                  <scroll-wrapper-slider class="without-scroll scroll-customize-wrapper-mrb">
+                  <scroll-wrapper-slider class="without-scroll">
                     <span class="arrow-slider left-button">{% render 'arrow-slider-left' %}</span>
                     <span class="arrow-slider right-button">{% render 'arrow-slider-left' %}</span>
                     <div class="variant-picker__option-values h-stack gap-2.5 wrap inner_container_items">
