--- a/src/scss/views/pdp.scss
+++ b/src/scss/views/pdp.scss
@@ -1,11 +1,17 @@
 .template-product {
-  product-gallery {
-    @media screen and (min-width: 1000px) {
-      --product-gallery-thumbnail-size: 6.25rem;
-      column-gap: 2.438rem;
-      position: sticky;
-      top: 0;
+
+  .sticky-product-gallery{
+    product-gallery{
+      @media screen and (min-width: 1000px) {
+        --product-gallery-thumbnail-size: 6.25rem;
+        column-gap: 2.438rem;
+        position: sticky;
+        top: 0;
+      }
     }
+  }
+  product-gallery {
+    
     .product-gallery__thumbnail[aria-current="true"] {
       padding: 0px;
       &[aria-current="true"] {
@@ -178,6 +184,37 @@
         flex-direction: row-reverse;
         buy-buttons{
           flex: 1;
+          button[type="submit"]{
+            color: #FFF;
+            text-align: center;
+            font-family: Nunito Sans;
+            font-size: 14px;
+            font-style: normal;
+            font-weight: 400;
+            line-height: normal;
+            letter-spacing: 1.4px;
+            text-transform: uppercase;
+            column-gap: 8px;
+            &:hover{
+              color: #1C1C1C;
+            }
+          }
+          .price-list--product{
+            sale-price{
+              color: inherit;
+              text-align: center;
+              font-family: Nunito Sans;
+              font-size: 14px;
+              font-style: normal;
+              font-weight: 400;
+              line-height: normal;
+              letter-spacing: 1.4px;
+              text-transform: uppercase;
+            }
+            compare-at-price{
+              display: none;
+            }
+          }
         }
         quantity-selector{
           --quantity-selector-height: 2.5rem;
@@ -255,7 +292,7 @@
           font-size: 16px;
           font-style: normal;
           font-weight: 700;
-          line-height: normal;
+          line-height: 17px;
           letter-spacing: 1.6px;
           padding: 0px;
           display: flex;
@@ -336,33 +373,32 @@
         }
       }
     }
-    .ptw-app-label{
+    .ptw-app-label,.pplr-checkbox .pplrlabel{
       /* Hide the default checkbox */
-      position: relative;
-      input[type="checkbox"] {
-        display: none;
-      }
-      /* Define the custom appearance for the checkbox */
-      input[type="checkbox"] + label::before {
-        position: absolute;
-        left: 0px;
-        content: " ";
-        display: inline-block;
-        width: 15px;
-        height: 15px;
-        border: 1px solid #343434;
-        border-radius: 50%;
-        margin-right: 10px;
-        text-align: center;
-        line-height: 18px;
-        font-weight: bold;
-        padding: 1px;
+      input[type="checkbox"]{
+        appearance: none;
+        height: 16px;
       }
 
-      /* Style when the checkbox is checked */
-      input[type="checkbox"]:checked + label::before {
+      input[type="checkbox"]:before {
+        transition-timing-function: cubic-bezier(.075, .820, .165, 1);
+          border: 1px solid;
+          border-radius: 22px;
+          background-color: transparent;
+          border-color: #343434;
+          box-sizing: border-box;
+          color: #3acfb6;
+          content: close-quote;
+          display: inline-block;
+          height: 16px;
+          transition-duration: .5s;
+          transition-property: background-color, border-color;
+          width: 16px;
+      }
+      
+      input[type="checkbox"]:checked:before {
         background: radial-gradient(#0500FF 0%,#0500FF 50%,transparent 60%,transparent);
-        color: #fff;
+        border-color: #343434;
       }
   }
 
@@ -391,9 +427,9 @@
           font-size: 16px;
           font-style: normal;
           font-weight: 700;
-          line-height: normal;
+          line-height: 15px;
           letter-spacing: 1.6px;
-          margin-left: 25px;
+          margin-left: 10px;
 
           .ptw-price{
             color: #343434;
@@ -409,6 +445,9 @@
       }
       .ptw-app-label{
         display: flex;
+        input{
+          height: 15px;
+        }
 
       }
       .ptw-app-gnote{
@@ -513,7 +552,8 @@
             letter-spacing: 1.56px;
           }
           .button--outline{
-            width: 100%;
+            min-width: 172px;
+            width: fit-content;
             margin-bottom: 12px;
             color: #fff;
             text-align: center;
